# backend_pae_account_multiagent_system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  MIGRATION.md  Makefile  Procfile  README.md  app.yaml  backend_pae_account_multiagent_system.code-workspace  docker-compose.dev.yml  frontend_pae_account_multiagent_system.code-workspace  main.py  pyproject.toml  render.yaml  seed_company.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 27d5044c4371_add_parser_mode_and_cancelled_status_to_.py  33c6ac057344_merge_heads_after_pending_audit_review.py  515fdf0e01b9_add_company_puc_config_and_company_rate_.py  5bc6243a55b2_add_chat_tables.py  85397898945d_add_es_declarante_and_tax_declaration_.py  8fb1b0855393_initial_schema.py  a1b2c3d4e5f6_add_chat_tables.py  a1b2c3d4e5f6_stub_recover_missing_revision.py  a3b4c5d6e7f8_add_company_nit_to_ingest_jobs.py  a3c4d5e6f7b8_capture_supabase_rls.py  a7b8c9d0e1f2_add_frequency_to_financial_statements.py  a7b8c9d0e1f2_add_national_rates.py  a805015c381f_fix_ingeststatus_cancelled_enum_casing.py  (+55 more)
data/: calendario_bogota_2026.json  calendario_dian_2026.json  calendario_santa_marta_2026.json  dian_municipios.json  ley_43_1990.json  normativa_tributaria.json  puc_accounts.json  retencion_fuente_2026.json
docs/: ARCHITECTURE_FLOWS.md  COMO_EJECUTAR_TODO.md  Diagrama de Arquitectura del Sistema Agéntico Cont 3069f6062abf80f38ce8cbd213038242.md  Diseño de arquitectura de agente 3009f6062abf809299aac221bdc708a0.md  EXPORTAR_REPORTES.md  Estructura de Front-end y de UX 3009f6062abf80bfa68ace63025bddef.md  Estructura de validación y evaluación 3009f6062abf80298329e65aa1fa040c.md  IMPLEMENTATION_STATUS.md  plantilla_validacion_contable.md  resumen_ce_ds_checklist.md  tax-module-followups.md  via_a_documentos_mapeo_contable.md  ¿Cómo se desplegaría y cómo se integraría todo de  3009f6062abf80d482c0c00198e72c16.md
documenta/: investigacion_apis_tributarias_colombia.md
plans/: AGENTE_PILOTO_DESIGN.md  AGENTE_PILOTO_GUIA.md  AGENTE_PILOTO_SUMMARY.md  AGENTE_PILOTO_TECH.md  ARQUITECTURA_AGENTES.md  CONTRATO_APIS.md  GUIA_TECNICA_FASE1.md  INDICE.md  ONE_PAGER.md  PLAN_IMPLEMENTACION.md  README_PLAN.md  RESUMEN_COMPLETO.md  RESUMEN_EJECUTIVO.md  ROADMAP_EJECUTABLE.md  START_HERE.md  TIMELINE_VISUAL.md
scripts/: bench_threadpool.py  check_migration_linearity.py  check_provider_usage.py  demo_reportero_reports.py  demo_supabase_process.py  diagnose_pending_transactions.py  diagnose_pending_transactions.sql  fix_alembic_stamp.py  fix_stuck_pending_transactions.py  gen_via_a_test_docs.py  ingest_test_results.json  populate_rag.py  seed_ci_settings.py  seed_dian_municipios.py  seed_puc.py  seed_reteica_tarifas.py  seed_tarifas_renta.py  seed_tax_concepts.py  seed_tax_constants.py  simulate_frontend_full_pipeline.py  test_ingest_pipeline.py
tests/: conftest.py  test_agent_integration.py  test_agent_quick.py  test_api_endpoints.py  test_auditor_agent.py  test_auth_core.py  test_contador_examples.py  test_database.py  test_db_service_statements.py  test_doc_classifier.py  test_e2e_phase2.py  test_e2e_supabase_pipeline_validation.py  test_e2e_todos_agentes.py  test_existing_routes_auth.py  test_financial_statement_service.py  test_ingest_api.py  test_ingest_schemas.py  test_llm_client_e2e_hook.py  test_manual_requests.py  test_national_rates_migration.py  test_persist_node_tax_persistence.py  test_process_api.py  test_process_pipeline.py  test_rag.py  test_rag_expanded.py  test_reportero_agent.py  test_tributario_agent.py  test_validation_system.py
(+324 files in other folders)
