[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-pae-account-multiagent-system"
version = "0.1.0"
description = "PAE Account Multiagent System Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "fastapi-cors>=0.0.6",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.24.0",
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-google-genai>=4.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "reportlab>=4.0.0",
    "httpx>=0.25.0",
    "chromadb>=1.0.0",
    "langchain-community>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "numpy>=1.24",
]

[tool.setuptools]
packages = ["app"]
