[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-pae-account-multiagent-system"
version = "0.1.0"
description = "PAE Account Multiagent System Backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "fastapi-cors>=0.0.6",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.24.0",
    "gunicorn>=23.0.0",
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3.0",
    "huggingface_hub>=0.22.0",
    "reportlab>=4.0.0",
    "httpx>=0.25.0",
    "langchain-community>=0.4.0",
    "langchain-google-genai>=2.0.0",
    "llama-cloud>=1.0.0",
    "nest-asyncio>=1.6.0",
    "langchain-openai>=1.1.12",
    "openpyxl>=3.1.5",
    "langchain-groq>=1.1.2",
    "tqdm>=4.67.3",
    "llama-parse>=0.5.20",
    "sse-starlette>=1.6.0",
    "langsmith>=0.7.9",
    "python-jose[cryptography]>=3.5.0",
    "inngest>=0.5.18",
    "tenacity>=8.0.0",
    "slowapi>=0.1.9",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.3",
    "black>=23.0",
    "ruff>=0.1",
    "numpy>=1.24",
    "pre-commit>=4.5.1",
    "httpx>=0.28.1",
]
